- i_ft2_glyph_name() accepted only an unsigned char as the
  character code to get the name for, which meant it
  didn't work for unicode characters \x{100} or above
- the XS for i_ft2_glyph_name() had a similar problem
- added NameTest.ttf to be used in checking unicode glyph
  names
- added reliable_only optional parameter to the glyph_names()
  method so you can ignore theresult of FT_Has_PS_Glyph_Names()
- handle errors given by i_ft2_glyph_name() a bit more
  correctly
- the FT1 glyph_names() method didn't do correct error handling 
  when the string parameter wasn't supplied
- some memory allocated when creating a callback IO object (io_new_cb)
  wasn't being released (detected with valgrind)
- the testtools.pl match[nx]() functions escapes the test string on 
  test failure a bit better
- the XS code for i_tt_glyph_name() used unsigned char to store a 
  unicode character when it should have used unsigned long.
- the XS code for i_t1_glyph_name() used unsigned char to store a 
  unicode character when it should have used unsigned long.
- resolves https://rt.cpan.org/Ticket/Display.html?id=7949
- the type 1 glyph_names() method didn't do correct error handling 
  when the string parameter wasn't supplied
- renamed io.h to imio.h to prevent problems building under cygwin.
  resolve https://rt.cpan.org/Ticket/Display.html?id=7948
- i_writegif_low() wasn't setting the returned global palette, which
  meant a rubbish palette was returned to the user (detected with valgrind)

0.43_03

- change the "double-include" protection macro that imio.h uses.
- updated download locations for the various libraries that Imager 
  depends on.  Added some advice for cygwin.
- more information on gif library versions in README and Makefile.PL

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
